k8s/jellyfin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    name: jellyfin
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/component: media-server
